--- a/templates/index.html
+++ b/templates/index.html
@@ -40,20 +40,32 @@
 			</div>
 		</div>
 		<div class="row form-position">
-			<div class="col bounding-box text-center">
+			<div class="col text-center">
 				<h3>แผนภูมิวงกลมแสดงร้อยละของคำเชิงต่าง ๆ</h3>
-				<div id="canvas-holder" class="bounding-box display-pie">
+				<div id="canvas-holder" class="display-pie">
 					<canvas id="chart-area" style="width: 400px; height: 400px; margin: auto;"></canvas>
 				</div>
 			</div>
 			<div class="col">
 				<div class="row">
-					<h3>คำรุนแรง</h3><br>
-					<h4 id="negative" style="color:red;"></h4>
+					<div class="col">
+						<div class="row">
+							<h3>คำรุนแรง</h3>	
+						</div>
+						<div class="row">
+							<h4 id="negative" style="color:red;"></h4>
+						</div>
+					</div>
 				</div>
 				<div class="row form-position">
-					<h3>คำสร้างสรรค์</h3><br>
-					<h4 id="positive" style="color:green;"></h4>
+					<div class="col">
+						<div class="row">
+							<h3>คำสร้างสรรค์</h3>
+						</div>
+						<div class="row">
+							<h4 id="positive" style="color:green;"></h4>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
